--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          <img src="WhatsApp Image 2024-10-14 at 21.23.34.jpeg" alt="Paisagem da praia durante a noite">
          <h3 class="title"><a href="#">Praia de São Vicente-SP</a></h3>
          <p class="descricao">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi ex modi, facilis soluta cumque non deserunt, eos delectus alias temporibus quam, in doloremque aliquid? Rem fugit dolore iure ratione nemo!
+          Foto tirada na praia de São Vicente-sp, viagem realizada com minha namorada na qual passou 10 dias de passeio.
          </p>
          <p class="author">Por: Luan Dantas</p>
          <a href="#">Ler mais</a>
@@ -42,7 +42,7 @@
          <img src="WhatsApp Image 2024-10-14 at 21.27.35.jpeg" alt="Visão de um piquinique com vista para uma roda gigante">
          <h3 class="title"><a href="#">Parque Vila Lobos</a></h3>
          <p class="descricao">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi ex modi, facilis soluta cumque non deserunt, eos delectus alias temporibus quam, in doloremque aliquid? Rem fugit dolore iure ratione nemo!
+          Parque Vila Lobos, passeio em casal no qual a foto foi tirada proxima a roda gigante que foi recentimente inaugurada para apreciar a vista.
          </p>
          <p class="author">Por: Luan Dantas</p>
          <a href="#">Ler mais</a>
@@ -51,7 +51,7 @@
          <img src="WhatsApp Image 2024-10-14 at 21.27.26.jpeg" alt="Visão do lago do parque ibirapuera">
          <h3 class="title"><a href="#">Parque Ibirapuera</a></h3>
          <p class="descricao">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi ex modi, facilis soluta cumque non deserunt, eos delectus alias temporibus quam, in doloremque aliquid? Rem fugit dolore iure ratione nemo!
+         Dia de sol, bem refrescante, um final de semana bem aproveitado para um ótimo passeio, foto tirada proximo ao lago do parque Ibirapuera-SP, lindo lugar para ir com a família, amigos ou em casal!
          </p>
          <p class="author">Por: Luan Dantas</p>
          <a href="#">Ler mais</a>
